--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,5 +7,5 @@
 
 /* Make sure to force reload CSS */
 :root {
-  --refresh-marker: 3;
+  --refresh-marker: 4;
 }
